# Personal-Knowledge-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  repomix-output.xml  requirements.txt  test_chunking.py  test_embed_chunks.py  test_embedding_basics.py  test_semantic_only.py
.claude/: settings.local.json
configs/: config.yaml
data/eval/: results_20260420_183359.json  sample_test_set.jsonl  test_queries.json
data/graph/: knowledge_graph.json
data/history/: query_history.json
data/index/: default.bm25.pkl  default.faiss  default.meta.json  my_knowledge_base.faiss  my_knowledge_base.meta.json
data/memory/: conversation.json
examples/: advanced_usage.py  basic_usage.py
scripts/: run_eval.py  run_eval_naive.py
src/: __init__.py  __main__.py  cli.py  config.py  config_schema.py
src/evaluation/: __init__.py  answer_eval.py  evaluator.py  metrics.py
src/ingestion/: __init__.py  document.py  document_manager  document_manager.py  knowledge_base.py  ner_extractor.py  similarity.py  test_my_pdf.py
src/knowledge_graph/: __init__.py  graph_builder.py  graph_store.py
src/rag/: __init__.py  annotations.py  cache.py  conflict_detector.py  fact_verifier.py  grounding.py  llm.py  memory.py  pipeline.py  query_history.py
src/retrieval/: __init__.py  entity_reranker.py  evaluation.py  hybrid_search.py  query_expansion.py  reranker.py
src/study/: __init__.py  path_generator.py  quiz_generator.py  summariser.py
src/utils/: __init__.py  logger.py
src/web/: __init__.py  app.py
tests/: conftest.py
tests/fixtures/: sample.docx  sample.md  sample.txt
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: test_adaptive.py  test_annotations.py  test_answer_eval.py  test_answer_eval_endpoint.py  test_api.py  test_cache.py  test_chunking.py  test_cli.py  test_conflict_detector.py  test_document_registry.py  test_embeddings.py  test_fact_verifier.py  test_graph.py  test_grounding.py  (+14 more)
(+38 files in other folders)
